# SofaViewer

./: CMakeLists.txt  README.md  SofaFrontEndViewer.pro  SofaFrontEndViewer.qrc  SofaFrontEndViewer.rc  main.cpp
cmake/: functions.cmake
core/: BaseDocument.cpp  BaseDocument.h  CMakeLists.txt  Document.cpp  Document.h  DocumentFactory.cpp  DocumentFactory.h  Graph.cpp  Graph.h  GraphImage.cpp  GraphImage.h  GraphImages.cpp  GraphImages.h  MetaProperties.h  Model.cpp  Model.h  MouseEvent.h  MouseManipulator.cpp  MouseManipulator.h  ObjectProperties.cpp  ObjectProperties.h  PropertiesUtils.h  Property.cpp  Property.h  Scene.cpp  Scene.h  SimpleGUI.cpp  SimpleGUI.h  VectorWrapper.h
libs/SFELib/: CMakeLists.txt  GraphImages.cpp  SofaDocument.cpp  SofaDocument.h  SofaProperties.h
libs/core/: BaseDocument.cpp  BaseDocument.h  CMakeLists.txt  DocumentFactory.cpp  DocumentFactory.h  Graph.cpp  Graph.h  GraphImage.cpp  MetaProperties.h  MouseManipulator.cpp  MouseManipulator.h  ObjectProperties.cpp  ObjectProperties.h  PropertiesUtils.h  Property.cpp  Property.h  SimpleGUI.cpp  SimpleGUI.h  StringConversion.h  StructMeta.cpp  StructMeta.h  VectorWrapper.h  core.h
libs/render/: CMakeLists.txt  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  shaders.h
libs/serialization/: CMakeLists.txt  DocXML.cpp  DocXML.h  ExportDocXML.cpp  ImportDocXML.cpp  serialization.h
modules/ModelViewer/: CMakeLists.txt  Document.cpp  Document.h
modules/SFEClient/: CMakeLists.txt  Document.cpp  Document.h
modules/SFELib/: SofaDocument.cpp  SofaDocument.h  SofaProperties.cpp  SofaProperties.h
modules/SFELocal/: CMakeLists.txt  Document.cpp  Document.h  GraphImages.cpp  GraphImages.h  SofaProperties.cpp  SofaProperties.h
modules/SGA/: CMakeLists.txt  Document.cpp  Document.h  MeshDocument.cpp  MeshDocument.h  MeshImport.cpp  MeshImport.h  SGADocument.cpp  SGADocument.h  SGAExecution.cpp  SGAExecution.h  SGAFile.cpp  SGAFile.h  SGAProperties.cpp  SGAProperties.h
render/: CMakeLists.txt  Model.cpp  Model.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  shaders.h
share/icons/: Thumbs.db
share/shaders/: shader.frag  shader.vert
ui/: CMakeLists.txt  GraphModel.cpp  GraphModel.h  GraphView.cpp  GraphView.h  MainWindow.cpp  MainWindow.h  OpenGLView.cpp  OpenGLView.h  PropertiesDialog.cpp  PropertiesDialog.h  PropertyWidget.cpp  PropertyWidget.h  SimpleGUIImpl.cpp  SimpleGUIImpl.h  main.cpp
ui/simplegui/: ButtonImpl.cpp  ButtonImpl.h  DialogImpl.cpp  DialogImpl.h  ExecuteByGUI.cpp  ExecuteByGUI.h  MenuImpl.cpp  MenuImpl.h  PanelImpl.cpp  PanelImpl.h  SettingsImpl.cpp  SettingsImpl.h  SimpleGUIImpl.cpp  SimpleGUIImpl.h
ui/widget/: ColorPropertyWidget.cpp  ListPropertyWidget.cpp  NumericalPropertyWidget.cpp  PropertyWidget.cpp  PropertyWidget.h  PropertyWidgetFactory.cpp  PropertyWidgetFactory.h  SimplePropertyWidget.h  StringPropertyWidget.cpp  StructPropertyWidget.cpp  StructPropertyWidget.h  TablePropertyWidget.cpp  TablePropertyWidget.h
